# bender-worker

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  bender-worker.service  install.sh
ci/: before_deploy.ps1  before_deploy.sh
resources/: blender_example_stdout.txt
src/: blend.rs  blendfile.rs  command.rs  config.rs  lib.rs  main.rs  optimize_blend.py  system.rs  work.rs
src/work/: blendfiles.rs  commands.rs  optimize.py  optimize.rs  ratelimit.rs  requests.rs  taskmanagment.rs
