[package]
name = "bender-worker"
version = "0.1.0"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
workspace = ".."

[dependencies]
amqp = { version = "0.1.2", default-features = false }
app_dirs = "1.2"
chrono = { version = "0.4", features = ["serde"] }
colored = "1.6"
console = "0.6"
dialoguer = "0.3"
docopt = "1"
fs2 = "0.4"
hyper = "0.12"
itertools = "0.7"
serde = "1"
serde_derive = "1"
shlex = "0.1"
toml = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }

bender_job = { path = "../bender-job" }
bender_mq = { path = "../bender-mq" }