[package]
name = "bender_worker"
version = "0.2.12"
license = "MIT"
readme = "README.md"
authors = ["David Huss <dh@widerstandzwecklos.at>"]
description = "As part of the bender renderfarm, the bender-worker service acts as a client that receives tasks from the qu which are executed. It downloads and stores the needed blendfile from flaskbender and stores the file after rendering"
# workspace = ".."

[package.metadata.deb]
extended-description = "As part of the bender renderfarm, the bender-worker service acts as a client that receives tasks from the qu which are executed. It downloads and stores the needed blendfile from flaskbender and stores the file after rendering"
depends = "$auto, blender, bender-cli"
assets = [
    ["target/release/bender-worker", "usr/bin/", "755"],
    ["bender-worker.service", "lib/systemd/system/", "755"]
]

[[bin]]
name = "bender-worker"
path = "src/main.rs"

[dependencies]
amqp = { version = "0.1.3", default-features = false }
app_dirs = "^1.2"
chrono = { version = "0.4", features = ["serde"] }
colored = "1.7"
console = "0.7"
dialoguer = "0.3"
docopt = "1"
fs2 = "0.4"
hyper = "0.12"
itertools = "0.8"
serde = "1"
serde_derive = "1"
shlex = "0.1"
toml = "0.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
reqwest = "0.9"

[target.'cfg(unix)'.dependencies]
users = "0.8"

bender_job = { git = "https://github.com/atoav/bender-job.git" }
bender_mq  = { git = "https://github.com/atoav/bender-mq.git" }
bender_config = { git = "https://github.com/atoav/bender-config.git" }